Make some improvements
