# internal/controllers/product/controller.go
@@ -1,20 +1,21 @@
 package product
 
 import (
+	"net/http"
+
 	"github.com/bozd4g/comparator/internal/services/products"
 	"github.com/gin-gonic/gin"
-	"net/http"
 )
 
-func New(service products.Service) Controller {
-	return controller{service: service}
+func New(service products.Servicer) Controller {
+	return Controller{service: service}
 }
 
-func (c controller) Init(e *gin.Engine) {
+func (c Controller) Init(e *gin.Engine) {
 	group := e.Group("api/products")
 	{
-		group.GET(":name", c.getAllByNameHandler)
-		group.POST("", c.getAllByMultipleNameHandler)
+		group.GET(":name", c.GetAllByNameHandler)
+		group.POST("", c.GetAllByMultipleNameHandler)
 	}
 }
 
@@ -25,10 +26,10 @@ func (c controller) Init(e *gin.Engine) {
 // @Produce json
 // @tags Products
 // @Param name path string true "Product name"
-// @Param category query string false "Category" Enums(Books)
+// @Param config query string true "Config" Enums(Books)
 // @Success 200 {object} []products.Dto "Success"
 // @Router /api/products/{name} [get]
-func (c controller) getAllByNameHandler(g *gin.Context) {
+func (c Controller) GetAllByNameHandler(g *gin.Context) {
 	name := g.Param("name")
 	if name == "" {
 		g.JSON(http.StatusBadRequest, gin.H{"error": "Name cannot be empty!"})
@@ -38,11 +39,11 @@ func (c controller) getAllByNameHandler(g *gin.Context) {
 	var err error
 	var dtos []products.Dto
 
-	category := g.Query("category")
-	if category == "" {
+	config := g.Query("config")
+	if config == "" {
 		dtos, err = c.service.GetAll(name)
 	} else {
-		dtos, err = c.service.GetAllByCategory(name, category)
+		dtos, err = c.service.GetAllByConfig(name, config)
 	}
 
 	if err != nil {
@@ -60,18 +61,18 @@ func (c controller) getAllByNameHandler(g *gin.Context) {
 // @Produce json
 // @tags Products
 // @Param request body []string true "Products"
-// @Param category query string true "Category" Enums(Books)
+// @Param config query string true "Config" Enums(Books)
 // @Success 200 {object} []products.MultipleDto "Success"
 // @Router /api/products [post]
-func (c controller) getAllByMultipleNameHandler(g *gin.Context) {
+func (c Controller) GetAllByMultipleNameHandler(g *gin.Context) {
 	var names []string
 	if err := g.ShouldBind(&names); err != nil {
 		g.JSON(http.StatusBadRequest, gin.H{"error": "The request data is invalid!"})
 		return
 	}
 
-	category := g.Query("category")
-	dtos, err := c.service.GetAllMultipleByCategory(names, category)
+	config := g.Query("config")
+	dtos, err := c.service.GetAllMultipleByConfig(names, config)
 
 	if err != nil {
 		g.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
